--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   "require":     {
     "php":              ">=5.4.0",
     "lusitanian/oauth": "v0.3.0",
-    "rmccue/requests":  "*"
+    "rmccue/requests":  "*",
+    "cme/cme-data":     "*"
   },
   "autoload":    {
     "psr-4": {
