--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "php":              ">=5.4.0",
     "lusitanian/oauth": "v0.3.0",
     "rmccue/requests":  "*",
-    "cme/cme-data":     "@dev"
+    "cme/cme-data":     "dev-master"
   },
   "autoload":    {
     "psr-4": {
